--- a/web/webui/index.html
+++ b/web/webui/index.html
@@ -38,6 +38,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         async function restartMewdl() {
+            let p = prompt("Are you sure you want to restart mewdl (Yes/No)");
+
+            if(p != "Yes") {
+                return;
+            }
+
             let res = await fetch("/restart", {
                 credentials: "include",
                 method: "POST"
