--- a/web/webui/head.html
+++ b/web/webui/head.html
@@ -1,6 +1,15 @@
 <style>
     html, body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, form, fieldset, legend, input, textarea, button, select, blockquote, pre, code, .container {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin-bottom: 0px !important;
+    }
+
+    h2 {
+        font-weight: normal;
+    }
+
+    .cluster p {
+        margin-top: 0px !important;
     }
 
     .cluster {
@@ -14,5 +23,30 @@
     .cluster-pane {
         min-height: 120px;
         border-top: 1px solid;
+    }
+
+    button {
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+        border-radius: 4px;
+    }
+
+    button:hover {
+        background-color: #45a049;
+    }
+
+    .unknown {
+        color: #aaa;
+    }
+
+    .ald {
+        font-size: 0.8em;
+    }
+
+    .clickable {
+        cursor: pointer;
     }
 </style>
