add config support

--- a/web/webui/head.html
+++ b/web/webui/head.html
@@ -4,6 +4,10 @@
         margin-bottom: 0px !important;
     }
 
+    html {
+        margin-bottom: 20px !important;
+    }
+
     h2 {
         font-weight: normal;
     }
@@ -17,7 +21,8 @@
     }
 
     .cluster-para {
-        color: red;
+        font-weight: bold;
+        padding: 5px;
     }
 
     .cluster-pane {
@@ -48,5 +53,21 @@
 
     .clickable {
         cursor: pointer;
+    }
+
+    #action-logs {
+        height: 280px;
+        max-height: 280px;
+        padding-bottom: 10px;
+        overflow-y: scroll;
+        border: 1px solid;
+    }
+
+    .c-active {
+        background-color: lightgreen;
+    }
+
+    .c-inactive {
+        background-color: rgba(218, 134, 134, 0.843);
     }
 </style>
