--- a/web/webui/head.html
+++ b/web/webui/head.html
@@ -70,4 +70,8 @@
     .c-inactive {
         background-color: rgba(218, 134, 134, 0.843);
     }
+
+    .active {
+        display: initial !important;
+    }
 </style>
